.metadata/.plugins/org.eclipse.cdt.ui/serialcom.build.log
12:15:45 **** Incremental Build of configuration Debug for project serialcom ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:78:3: error: too few arguments to function 'HD44780_init'
   78 |   HD44780_init();
      |   ^~~~~~~~~~~~
In file included from ../Core/Src/main.c:25:
../Core/Inc/HD44780.h:150:6: note: declared here
  150 | void HD44780_init(const HD44780 *lcd);
      |      ^~~~~~~~~~~~
../Core/Src/main.c:69:11: warning: unused variable 'buf' [-Wunused-variable]
   69 |   uint8_t buf[12];
      |           ^~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

12:15:45 Build Failed. 2 errors, 1 warnings. (took 176ms)

